# ADDP-Workflow

./: .dockerignore  .golangci.yml  AGENTS.md  ARCHITECTURE.md  BUILD_COMMANDS.md  BUILD_DEBUG_WINDOWS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEBUG_EXE.md  DECISIONS.md  DEMO_SCENARIOS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPRECATED.md  Dockerfile  Dockerfile.windows  GUI_DESIGN.md  GUI_USAGE.md  LICENSE  Makefile  OLLAMA_MODEL_GUIDE.md  PROJECT_CONTEXT.md  QUICK_FIX.md  QUICK_START.md  README.md  README.zh.md  README_CN.md  README_cn.md  README_zh.md  RELEASE_NOTE.md  STRUCTURE.md  TARGET.md  WINDOWS_BUILD.md  WINDOWS_中文支持.md  build-gui.bat  build-windows.bat  build.bat  build.sh  compile-debug.ps1  (+22 more)
.claude/: CLAUDE.md  DECISIONS.md  PROJECT_CONTEXT.md  last-session.yml  settings.local.json
.claude/memory/: DECISIONS.md  PROJECT_CONTEXT.md  agent-optimization-plan.md  last-session.yml
.claude/reports/: 2025-01-21-output-styles.md  2025-09-02-agent-optimization.md  2025-09-18-framework-launch.md
.claude/state/: initial-scan.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
agents/: CAPABILITY_MATRIX.md  README.en.md  README.md  README_ACTUAL_USAGE.md  README_cn.md  USAGE_TRACKING_TEMPLATE.md  _analytics_collector.json  _orchestrator_instructions.md  _selection_engine_v2.json  _user_feedback.json
agents/docs/: README_zh.md
cmd/: .editorconfig  .gitattributes
commands/: COMMANDS_SUMMARY.md  COMMAND_COORDINATION.md  GLOBAL_COMMANDS.md  SYNC_COMMANDS.md
commands-legacy/: README.md
config/: token-settings.yaml  triggers.yaml  workflows.yaml
docs/: FILE_OPERATIONS_MATRIX.md
guides/: DOCUMENT_STRUCTURE_STANDARD.md  LEGACY_PROJECT_ONBOARDING.md  SDK_DEVELOPMENT_WORKFLOW.md
output-styles/: README.md  architect.md  concise-developer.md  devops-engineer.md  educational-mentor.md  orchestrator.md  orchestrator_v2_working.md  product-expert.md  sdk-design-expert.md  sdk-prd-expert.md  security-analyst.md  senior-architect.md  system-architect.md
scripts/: quick_start.py  test_mcp_tools.py
templates/: CLAUDE_MD_TEMPLATE.md  SDK_PROJECT_TEMPLATE.md
workflow-legacy/: ADAPTERS.md  ADDP.md  AGENTS.md  AI_FLOW.,md  CLAUDE.md  MCP.md  QUALITY_ANALYSIS_REPORT.md  README.md  README_zh.md  RELEASE_NOTE.md  TEST_AGENTS.md
(+217 files in other folders)
